@@ -4,10 +4,10 @@ import io.github.ngbsn.model.Column;
 import io.github.ngbsn.model.EmbeddableClass;
 import io.github.ngbsn.model.ForeignKeyConstraint;
 import io.github.ngbsn.model.Table;
-import io.github.ngbsn.model.annotations.entityAnnotations.EntityAnnotation;
-import io.github.ngbsn.model.annotations.entityAnnotations.TableAnnotation;
-import io.github.ngbsn.model.annotations.fieldAnnotations.ColumnAnnotation;
-import io.github.ngbsn.model.annotations.fieldAnnotations.NotNullAnnotation;
+import io.github.ngbsn.model.annotations.entity.EntityAnnotation;
+import io.github.ngbsn.model.annotations.entity.TableAnnotation;
+import io.github.ngbsn.model.annotations.field.ColumnAnnotation;
+import io.github.ngbsn.model.annotations.field.NotNullAnnotation;
 import io.github.ngbsn.util.SQLToJavaMapping;
 import io.github.ngbsn.util.Util;
 import net.sf.jsqlparser.parser.CCJSqlParserUtil;
@@ -27,9 +27,20 @@ import java.util.stream.Collectors;
  * It will also extract all the columns from the script and add to the Table model
  */
 public class ModelGenerator {
+
+    public static final String REGEX_ALL_QUOTES = "[\"']";
+
+    private ModelGenerator() {
+    }
+
     private static final Logger logger = LoggerFactory.getLogger(ModelGenerator.class);
     protected static Map<String, Table> tablesMap = new HashMap<>();
 
+    /**
+     * Parse the DDL statements using JSQL parser
+     * @param sqlScript The input DDL commands used for generating the models
+     * @return List of Tables models
+     */
     public static List<Table> parse(final String sqlScript) {
         try {
             Statements statements = CCJSqlParserUtil.parseStatements(sqlScript);
@@ -40,7 +51,7 @@ public class ModelGenerator {
         } catch (Exception e) {
             logger.error("Error occurred", e);
         }
-        return null;
+        return new ArrayList<>();
     }
 
     /**
@@ -51,16 +62,15 @@ public class ModelGenerator {
     }
 
     /**
-     * Iterate over all the Create Table statements and prepare the list of Table Model
-     *
-     * @param statements set of statements
+     * Iterate over all the JSQL Create Table  statements and prepare the list of Table Model
+     * @param statements Set of JSQL statements
      */
-    private static void processCreateTableStatements(Statements statements) {
+    private static void processCreateTableStatements(final Statements statements) {
         statements.getStatements().forEach(statement -> {
             //Iterating over all Tables
             if (statement instanceof CreateTable parsedTable) {
                 Table table = new Table();
-                table.setTableName(parsedTable.getTable().getName().replaceAll("[\"']", ""));
+                table.setTableName(parsedTable.getTable().getName().replaceAll(REGEX_ALL_QUOTES, ""));
                 tablesMap.put(table.getTableName(), table);
                 table.setClassName(Util.convertSnakeCaseToCamelCase(table.getTableName(), true));
 
@@ -82,26 +92,25 @@ public class ModelGenerator {
                 extractPrimaryKeys(optionalIndex.orElse(null), table);
 
                 //extract foreign keys
-                List<Index> foreignKeyIndexes = parsedTable.getIndexes().stream().filter(index -> index instanceof ForeignKeyIndex).toList();
+                List<Index> foreignKeyIndexes = parsedTable.getIndexes().stream().filter(ForeignKeyIndex.class::isInstance).toList();
                 extractForeignKeys(foreignKeyIndexes, table);
             }
         });
     }
 
     /**
-     * Iterate over all the Alter Table statements and prepare the list of Table Model
-     *
-     * @param statements set of statements
+     * Iterate over all the JSQL Alter Table statements and prepare the list of Table Model
+     * @param statements Set of JSQL statements
      */
-    private static void processAlterTableStatements(Statements statements) {
+    private static void processAlterTableStatements(final Statements statements) {
         statements.getStatements().forEach(statement -> {
             //Iterating over all Tables
             // Look for primary and foreign keys in ALTER TABLE constraints
             if (statement instanceof Alter alterTable) {
-                Table table = tablesMap.get(alterTable.getTable().getName().replaceAll("[\"']", ""));
+                Table table = tablesMap.get(alterTable.getTable().getName().replaceAll(REGEX_ALL_QUOTES, ""));
                 List<Index> foreignKeyIndexes = new ArrayList<>();
                 alterTable.getAlterExpressions().forEach(alterExpression -> {
-                    if (alterExpression.getIndex() instanceof ForeignKeyIndex foreignKeyIndex) {
+                    if (alterExpression.getIndex() instanceof ForeignKeyIndex) {
                         //case: ALTER TABLE FOREIGN KEY
                         foreignKeyIndexes.add(alterExpression.getIndex());
                     } else if (alterExpression.getIndex().getType().equals("PRIMARY KEY")) {
@@ -116,39 +125,39 @@ public class ModelGenerator {
 
 
     /**
-     * Looking for all foreign keys in this table and adding it to our model
-     *
-     * @param foreignKeyIndexes List of foreign key indexes
+     * Looking for all JSQL foreign keys in this table and adding it to our model
+     * @param foreignKeyIndexes List of JSQL foreign key indexes
      * @param table             Table model
      */
-    private static void extractForeignKeys(List<Index> foreignKeyIndexes, Table table) {
+    private static void extractForeignKeys(final List<Index> foreignKeyIndexes, final Table table) {
         if (!foreignKeyIndexes.isEmpty()) {
             foreignKeyIndexes.forEach(index -> {
                 if (index instanceof ForeignKeyIndex foreignKeyIndex) {
                     ForeignKeyConstraint foreignKeyConstraint = new ForeignKeyConstraint();
                     foreignKeyConstraint.setColumns(foreignKeyIndex.getColumnsNames()
-                            .stream().map(s -> s.replaceAll("[\"']", "")).collect(Collectors.toList()));
+                            .stream().map(s -> s.replaceAll(REGEX_ALL_QUOTES, "")).toList());
                     foreignKeyConstraint.setReferencedColumns(foreignKeyIndex.getReferencedColumnNames()
-                            .stream().map(s -> s.replaceAll("[\"']", "")).collect(Collectors.toList()));
+                            .stream().map(s -> s.replaceAll(REGEX_ALL_QUOTES, "")).toList());
                     foreignKeyConstraint.setReferencedTableName(foreignKeyIndex.getTable().getName()
-                            .replaceAll("[\"']", ""));
+                            .replaceAll(REGEX_ALL_QUOTES, ""));
                     table.getForeignKeyConstraints().add(foreignKeyConstraint);
+
                 }
             });
         }
     }
 
     /**
-     * Extracting primary key information from the parsed data and setting them into the Table model
+     * Extracting primary key information from the JSQL parsed data and setting them into the Table model
      *
-     * @param primaryKeyIndex primaryKeyIndex
+     * @param primaryKeyIndex JSQL primaryKeyIndex
      * @param table           Table model
      */
-    private static void extractPrimaryKeys(Index primaryKeyIndex, Table table) {
+    private static void extractPrimaryKeys(final Index primaryKeyIndex, final Table table) {
         List<Index.ColumnParams> columnParamsList = primaryKeyIndex != null ? primaryKeyIndex.getColumns() : null;
         if (columnParamsList != null) {
             Set<Column> primaryKeyColumns = table.getColumns().stream().
-                    filter(column -> columnParamsList.stream().anyMatch(columnParams -> columnParams.getColumnName().replaceAll("[\"']", "").equals(column.getColumnName()))).collect(Collectors.toSet());
+                    filter(column -> columnParamsList.stream().anyMatch(columnParams -> columnParams.getColumnName().replaceAll(REGEX_ALL_QUOTES, "").equals(column.getColumnName()))).collect(Collectors.toSet());
 
             if (columnParamsList.size() > 1) {
                 table.setNumOfPrimaryKeyColumns(columnParamsList.size());
@@ -170,22 +179,21 @@ public class ModelGenerator {
     }
 
     /**
-     * Generate column models for all the parsed table
-     *
-     * @param parsedTable Parsed table
-     * @param columns     List of generated column models
+     * Generate column models for the JSQL parsed table
+     * @param parsedTable JSQL CreateTable
+     * @param columns     Set of generated column models
      */
-    private static void extractColumns(CreateTable parsedTable, Set<Column> columns) {
+    private static void extractColumns(final CreateTable parsedTable, final Set<Column> columns) {
         parsedTable.getColumnDefinitions().forEach(columnDefinition -> {
             Column column = new Column();
             columns.add(column);
             Set<String> columnAnnotations = new HashSet<>();
             column.setAnnotations(columnAnnotations);
-            column.setColumnName(columnDefinition.getColumnName().replaceAll("[\"']", ""));
+            column.setColumnName(columnDefinition.getColumnName().replaceAll(REGEX_ALL_QUOTES, ""));
             //Adding @Column
             columnAnnotations.add(ColumnAnnotation.builder().columnName(column.getColumnName()).build().toString());
             column.setFieldName(Util.convertSnakeCaseToCamelCase(column.getColumnName(), false));
-            column.setType(SQLToJavaMapping.sqlToJavaMap.get(columnDefinition.getColDataType().getDataType()));
+            column.setType(SQLToJavaMapping.getSqlToJavaMap().get(columnDefinition.getColDataType().getDataType()));
 
             //Check for NOT NULL
             if (columnDefinition.getColumnSpecs() != null) {
